--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "knex": "^0.21.5",
+    "mercadopago": "^1.5.14",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
