--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^7.4.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "dotenv-safe": "^8.2.0",
@@ -24,6 +25,7 @@
     "pdfmake": "^0.2.4",
     "pg": "^8.3.3",
     "qrcode": "^1.4.4",
+    "sdk-node-apis-efi": "^1.1.2",
     "sendmail": "^1.6.1"
   },
   "devDependencies": {
